# alfred_jira_workflow

./: .gitignore  .jiraconfig.template  Cargo.toml  README.md  azure-pipelines.yml
src/: alfred_result.rs  config.rs  fields.rs  issue.rs  item.rs  jira_api.rs  jira_client.rs  jira_request.rs  main.rs  search_command.rs  search_response.rs  workflow.rs
