[package]
name = "alfred_jira_workflow"
version = "0.2.0"
authors = ["dorayakikun <amakunai.dorayaki@gmail.com>"]

[dependencies]
clap = "2.20.0"
dirs = "1.0.5"
env_logger = "0.6"
error-chain = "0.12.0"
reqwest = "0.5"
log = "0.3"
rayon = "0.6.0"
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
toml = "0.3"