[package]
name = "alfred_jira_workflow"
version = "0.2.0"
authors = ["dorayakikun <amakunai.dorayaki@gmail.com>"]

[dependencies]
base64 = "~0.10"
clap = "2.20.0"
dirs = "1.0.5"
env_logger = "0.6"
error-chain = "0.12.0"
reqwest = "0.9"
log = "0.4"
rayon = "1.0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.5"